# std

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: json-test-suite.yml  test-win.yml  test.yml
src/: CMakeLists.txt
src/embed/: CMakeLists.txt  embed.c  embed.h
src/std/: Arena.c  Arena.h  ArenaTls.c  Array.hpp  CMakeLists.txt  ChainedStruct.hpp  Check.cpp  Check.h  Chronometry.c  Chronometry.h  CommandDecoder.hpp  CommandEncoder.hpp  CompilerInfo.h  Defer.hpp  Endian.h  FixedRingBuffer.hpp  Hash.c  Hash.h  KhrTwoCall.hpp  List.hpp  Modules.h  Optional.hpp  Path.cpp  Path.hpp  Pool.hpp  RadixSort.hpp  Ranges.hpp  Result.hpp  Sanitizer.h  SegmentArray.hpp  SignalTree.hpp  Slice.hpp  SliceStlString.hpp  SliceStlVector.hpp  SliceUtils.hpp  Sort.hpp  Strings.hpp  Testing.hpp  Trie.hpp  TrieStrKey.hpp  (+10 more)
src/std/gltf/: AccessorIterable.hpp  Descriptor.hpp  IntegerConversion.hpp  Loader.cpp  Loader.hpp  Math.hpp  Tests.cpp
src/std/json/: Parser.cpp  Parser.hpp  Utils.hpp  Value.hpp
src/std/json_test_suite/: README.md  entry.cpp
src/std/log/: log.c  log.h  log_android.c  log_emscripten.c  log_internal.h  log_linux.c  log_win32.c
src/std/os/: OsInfo.h  Sync.c  Sync.h  Thread.cpp  Thread.hpp
src/std/tests/: Arena.cpp  Array.cpp  Chronometry.cpp  CommandCodec.cpp  CompileC.c  Endian.cpp  FixedRingBuffer.cpp  Json.cpp  Log.cpp  Optional.cpp  Path.cpp  Pool.cpp  Result.cpp  SegmentArray.cpp  Slice.cpp  Sort.cpp  Strings.cpp  Thread.cpp  Utils.cpp  Uuid.cpp  VU128.cpp  Vector.cpp  entry.cpp
src/test_exe/: CMakeLists.txt  entry.cpp
util/: std.natvis
